# SelfStudies

./: .clang-format  .gitignore  README.md
CppKurs/Lecture_00/: hello_world.cpp
CppKurs/Lecture_01/Notes/: CMakeLists.txt  main  main.cpp  main.i  main.s  programm  programm.cpp  some_file.cpp  some_file.hpp
CppKurs/Lecture_01/task_1/: task_1.sh
CppKurs/Lecture_01/task_2/: CMakeLists.txt  build.sh
CppKurs/Lecture_02/Note/: switch.c  switch.cpp
CppKurs/Lecture_02/task_1/: CMakeLists.txt
CppKurs/Lecture_02/task_1/src/: main.cpp
CppKurs/Lecture_02/task_2/: CMakeLists.txt
CppKurs/Lecture_02/task_2/src/: main.cpp
CppKurs/Lecture_03/homework/: CMakeLists.txt  test.html  test_image_browser.html
CppKurs/Lecture_03/homework/src/: html_writer.cpp  image_browser.cpp  test.cpp  test_image_browser.cpp
CppKurs/Lecture_04/Notes/: notes.cpp
CppKurs/Lecture_04/homework_4/: CMakeLists.txt
CppKurs/Lecture_04/homework_4/include/: homework_4.h  utils.hpp
CppKurs/Lecture_04/homework_4/src/: ipb_algorithm.cpp  main.cpp
CppKurs/Lecture_04/homework_4/tests/: CMakeLists.txt  test_ipb_algorithm.cpp
CppKurs/Lecture_04/stl_algorithms/: min_element.cpp  utils.hpp
CppKurs/Lecture_05/Notes/: CMakeLists.txt  complex_in.txt  in.txt  notes.cpp  out.txt
CppKurs/Lecture_05/homework/: CMakeLists.txt
CppKurs/Lecture_05/homework/include/: homework_5.h
CppKurs/Lecture_05/homework/src/: convert_dataset.cpp  main.cpp  serialize.cpp
CppKurs/Lecture_05/homework/tests/: CMakeLists.txt  test_convert_dataset.cpp  test_serialize.cpp
CppKurs/Lecture_06/Notes/: CMakeLists.txt  notes.cpp
CppKurs/Lecture_06/hw_06/: CMakeLists.txt  main.cpp
CppKurs/Lecture_06/hw_06/api/: homework_6.h
CppKurs/Lecture_06/hw_06/io_tools/: io_tools.cpp
CppKurs/Lecture_06/hw_06/src/: homework_6.cpp
CppKurs/Lecture_06/hw_06/tests/: CMakeLists.txt  test_from_file.cpp  test_histogram.cpp  test_resize.cpp
CppKurs/Lecture_07/Notes/: main.cpp
CppKurs/Lecture_07/homework_7/: CMakeLists.txt
CppKurs/Lecture_07/homework_7/include/: homework_7.h  kMeans.hpp  sifts_internal.hpp
CppKurs/Lecture_07/homework_7/src/: BowDictionary.cpp  convert_dataset.cpp  kMeans.cpp  kmeans_example.cpp  main.cpp  serialize.cpp  sifts_internal.cpp
CppKurs/Lecture_07/homework_7/tests/: CMakeLists.txt  test_bow_dictionary.cpp  test_kmeans.cpp
CppKurs/Lecture_08/homework_8/task_1/: CMakeLists.txt  main.cpp
CppKurs/Lecture_08/homework_8/task_2/: CMakeLists.txt
CppKurs/Lecture_08/homework_8/task_2/include/: Image.h  IoStrategy.h  homework_8.h  io_tools.hpp
CppKurs/Lecture_08/homework_8/task_2/src/: Image.cpp  IoStrategy.cpp  io_tools.cpp  main.cpp
CppKurs/Lecture_08/homework_8/task_2/tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  homework_8_t2_test_test  homework_8_t2_test_test[1]_include.cmake  homework_8_t2_test_test[1]_tests.cmake
CppKurs/Lecture_08/listings/: heap_example.cpp  polymorphism_example_4.cpp
CppKurs/Lecture_08/listings/memory_issues/: dangling_pointer.cpp  memory_leak.cpp  memory_leak_2.cpp  raii_example.cpp
CppKurs/Lecture_08/listings/pointers/: arrays_and_ptrs_sloppy.cpp  deref_bad.cpp  ptr_deref_example.cpp
CppKurs/Lecture_08/listings/smart_pointers/: shared_ptr_example.cpp  unique_ptr_example.cpp  wrong_unique.cpp
CppKurs/Lecture_08/listings/using_pointers/: const_ptrs.cpp  polymorphism_pointers.cpp
CppKurs/images-freiburg-x10/data1/: gps_info.txt  image-timestamps.txt
